avancement meeting avec simple calendar - ajout depuis meeting client ou commande ok

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,3 +29,11 @@
 
 en:
   hello: "Hello world"
+
+  date:
+    formats:
+      default: "%d/%m-%Y"
+
+  datetime:
+    formats:
+      default: ! '%d/%m/%Y %H:%M'
