--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,5 +1,11 @@
----
 fr:
+
+  notices:
+    successfully_created: "Création réussie."
+    successfully_updated: "Mise à jour réussie."
+    successfully_destroyed: "Suppression réussie."
+    unauthorized_action: "Tu n'es pas autorisé(e) à effectuer cette action."
+
   activerecord:
     errors:
       messages:
