--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,16 +10,16 @@ en:
       default: "%d/%m/%Y %H:%M"
 
   reminders:
-    subject: "Reminder for upcoming appointment with Autour d'un Soir"
+    subject: "Reminder for upcoming appointment with Autour D'Un Soir"
     body:
-      greeting: "Don't forget your upcoming appointment at Autour d'un Soir"
+      greeting: "Don't forget your upcoming appointment at Autour D'Un Soir"
       appointment_details: "on %{date} for %{name}."
       location_label: "Meeting Location:"
       location_boutique: "Autour D'un Soir Boutique, 27-29 Boulevard Carnot 06400 Cannes."
       alternative_location: "If you can't make it, please contact us by replying to this email or by phone at 04.93.45.17.17."
 
   commande_email:
-    subject: "Your %{doc_type} %{ref_commande} at Autour d'un Soir"
+    subject: "Your %{doc_type} %{ref_commande} at Autour D'Un Soir"
     body:
       greeting: "Hello %{client},"
       document_info: "Please find attached your %{doc_type}"
@@ -39,7 +39,7 @@ en:
     facture simple: "Simple Invoice"
 
   email_footer:
-    thank_you: "The entire Autour d'un Soir team thanks you for your trust."
+    thank_you: "The entire Autour D'Un Soir team thanks you for your trust."
     availability: "We remain at your disposal for more information."
     review_invite: "Feel free to share your feedback on our service by clicking the link here:"
     review_link_text: "Link"
